<resources>
    <string name="app_name">Popular Movies</string>
    <string name="sort_by_popularity">Get Popular</string>
    <string name="sort_by_top_rated">Get Top-Rated</string>
    <string name="string_pseudo">Pseudo text</string>
    <string name="overview">Overview</string>
    <string name="Movie_Detail">Movie Details</string>
    <string name="MoviePoster">Movie Poster here</string>
    <string name="trailer_title">Trailers and clips</string>
    <string name="content_description_video_image">To show the youtube icon</string>
    <string name="reviews_title">Movie Reviews</string>
    <string name="Favourites">My Favourites</string>
    <string name="Add_to_fav"></string>
    <string name="my_favourites">My Favourites</string>
</resources>
